<resources>
    <string name="app_name">XLog解密</string>
    <string name="permission_success">授权成功</string>
    <string name="permission_fail">授权失败</string>
    <string name="open_file">打开文件</string>
    <string name="open_log_dir">默认目录</string>
    <string name="clean_history">删除历史</string>
    <string name="setting">偏好设置</string>
    <string name="not_support">不支持该文件类型</string>
    <string name="empty_private_key_hint">当前选择密钥：无</string>
    <string name="current_private_key_hint">当前选择密钥：%1$s</string>
    <string name="manager_private_key">管理密钥</string>
    <string name="select_private_key">选择密钥</string>
    <string name="add_private_key">增加密钥</string>
    <string name="please_select_private_key">请选择密钥后操作：</string>
    <string name="loading_message">请稍后</string>
    <string name="private_key_name">密钥名称：</string>
    <string name="private_key_name_hint">请输入密钥名称</string>
    <string name="private_key_value">密钥内容：</string>
    <string name="private_key_value_hint">请输入密钥内容</string>
    <string name="private_key_save">保存</string>
    <string name="private_key_delete">删除</string>
    <string name="private_key_save_success">密钥增加成功</string>
    <string name="private_key_change_success">密钥修改成功</string>
    <string name="private_key_delete_success">密钥删除成功</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_confirm">确认</string>
    <string name="import_private_key">导入PC端密钥</string>
    <string name="please_wait">请等待！</string>
    <string name="display_log">查看日志</string>
    <string name="msg_search_folder">在文件夹中查找</string>
    <string name="hint_find_project_filter">过滤文件扩展名 (可选)</string>
    <string name="msg_find_project_filter">用 \'|\'分割</string>
    <string name="msg_empty_view">没有数据</string>
    <string name="no_have_private_key">没有密钥</string>
    <string name="import_private_key_empty">密钥文件没有数据</string>
    <string name="import_private_key_fail">导入密钥失败</string>
    <string name="import_private_key_success">导入密钥成功</string>
    <string name="select_default_private_key_title">默认密钥设置</string>
    <string name="select_default_private_key_hint">导入日志解密时，是否使用默认选中的密钥？</string>
    <string name="split_file_key_title">分割文件</string>
    <string name="split_file_start_size_private_key_hint">文件大于多少M需要分割（1–100M）？</string>
    <string name="split_file_default_size_private_key_hint">分割文件的每个文件大小（1–100M）？</string>
    <string name="analysis_file_fail">解析文件失败！</string>
    <string name="msg_picked_isnt_dir">选择的路径不是文件夹!</string>
    <string name="err_invalid_data_by_intent">Intent 返回了无效数据</string>
    <string name="err_authority_not_allowed">权限“%s”不被允许</string>
    <string name="msg_select_from_primary_storage">从内部存储中选择目录</string>
    <string name="layout_tv_last">上个</string>
    <string name="layout_tv_next">下个</string>
    <string name="layout_tv_replace">替换</string>
    <string name="layout_tv_replaceAll">替换全部</string>
    <string name="text_to_search">查找文本</string>
    <string name="replacement">替换到的文本</string>
    <string name="cursor_actions">光标操作</string>
    <string name="go_to_end">到全文末尾</string>
    <string name="move_up">上移</string>
    <string name="move_down">下移</string>
    <string name="move_left">左移</string>
    <string name="move_right">右移</string>
    <string name="home">行首</string>
    <string name="end">行末</string>
    <string name="text_actions">文本操作</string>
    <string name="switch_color_scheme">颜色风格</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="search_text">搜索文本</string>
    <string name="search_text_dir">搜索所有文本</string>
    <string name="action_mode">标题栏模式</string>
    <string name="search_panel">搜索面板</string>
    <string name="code_navigation">代码导航</string>
    <string name="switch_language">调节程序语言</string>
    <string name="format">格式化</string>
    <string name="code_navi">代码导航</string>
    <string name="navi_err_msg">代码导航没有准备好或者该语言不支持</string>
    <string name="color_scheme">颜色风格</string>
    <string name="wordwrap">自动换行</string>
    <string name="line_number_visibility">显示行号</string>
    <string name="pin_line_number">固定显示行号</string>
    <string name="feature_switches">功能开关</string>
    <string name="magnifier">放大镜</string>
    <string name="open_completion_window_animation">自动补全窗口动画</string>
    <string name="use_icu_library">使用ICU</string>
    <string name="open_new_activity">打开新界面</string>
    <string name="not_supported">此项操作不受支持</string>
    <string name="line_info_panel_position">行号面板位置</string>
    <string name="fixed">固定</string>
    <string name="follow_scrollbar">跟随滚动条</string>
    <string name="top">上方</string>
    <string name="bottom">下方</string>
    <string name="left">左侧</string>
    <string name="right">右侧</string>
    <string name="center">中间</string>
    <string name="top_left">左上方</string>
    <string name="top_right">右上方</string>
    <string name="bottom_left">左下方</string>
    <string name="bottom_right">右下方</string>
    <string name="layout_tv_search_options">选项</string>
    <string name="search_option_regex">正则表达式</string>
    <string name="search_option_whole_word">全词匹配</string>
    <string name="search_option_match_case">区分大小写</string>
    <string name="open_file_tree">打开文件</string>
    <string name="edit_operation">编辑操作</string>
    <string name="dis_enable_edit">禁用编辑</string>
    <string name="enable_edit">启用编辑</string>
    <string name="del_history_record">删除结果：</string>
</resources>