<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="12dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
      android:text="@string/msg_search_folder" />

    <LinearLayout
      android:id="@+id/modules_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="24dp"
        android:orientation="vertical" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input"
      style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
        android:hint="@string/text_to_search"
      app:startIconDrawable="@drawable/ic_search">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/filter"
      style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp" android:hint="@string/hint_find_project_filter"
      app:helperText="@string/msg_find_project_filter"
      app:helperTextEnabled="true"
      app:startIconDrawable="@drawable/ic_filter">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

  </LinearLayout>

</androidx.core.widget.NestedScrollView>
