<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_230"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_import_private_key"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:text="@string/import_private_key"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"
            android:background="@drawable/btn_bg"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_private_key"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintTop_toBottomOf="@id/btn_import_private_key"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:text="@string/add_private_key"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"
            android:background="@drawable/btn_bg"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_manager_private_key"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintTop_toBottomOf="@id/btn_add_private_key"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:text="@string/manager_private_key"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"
            android:background="@drawable/btn_bg"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>