<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_80"
        app:srcCompat="@drawable/logo"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_current_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/empty_private_key_hint"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_manager_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_current_private_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_manager_private_key"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:padding="@dimen/dp_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/add_key"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_manager_private_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_manager_private_key"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/manager_private_key"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_select_private_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_manager_private_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_select_private_key"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:padding="@dimen/dp_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/key_manager"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_select_private_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_select_private_key"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/select_private_key"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_open_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_select_private_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_open_file"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:padding="@dimen/dp_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/open_file"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_open_file"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/open_file"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_open_log_dir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_open_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_open_log_dir"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:padding="@dimen/dp_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/open_file"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_log_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_open_log_dir"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/open_log_dir"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_clean_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_open_log_dir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_clean_history"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:padding="@dimen/dp_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/del_history"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_clean_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_clean_history"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/clean_history"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_clean_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_setting"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/setting"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_setting"
            android:layout_marginStart="@dimen/dp_15"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>